# praktika

./: README.md
Tyrimas/: 01_sampled_fpca_distance_models.ipynb  02_fpca_vs_fpls.ipynb  03_rkhs_robust.ipynb  04_final_functional.ipynb  05_functional_interpretability.ipynb
Tyrimas/final_functional/: 01_sampled_fpca_distance_models_best_by_J_20260409_2003.csv  01_sampled_fpca_distance_models_results_20260409_2003.csv  02_fpca_vs_fpls_best_by_classifier_20260409_2038.csv  02_fpca_vs_fpls_best_by_representation_20260409_2038.csv  02_fpca_vs_fpls_classifier_rskf_metrics_20260409_2038.csv  02_fpca_vs_fpls_classifier_summary_20260409_2038.csv  02_fpca_vs_fpls_pretty_table_20260409_2038.csv  03_rkhs_robust_raw_raw_xp_sampled_best_by_family_20260409_2056.csv  03_rkhs_robust_raw_raw_xp_sampled_summary_20260409_2056.csv  03_rkhs_robust_raw_raw_xp_sampled_table_20260409_2056.csv  04_final_functional_best_by_family_20260410_1655.csv  04_final_functional_distance_fold_metrics_20260410_1655.csv  04_final_functional_distance_summary_20260410_1655.csv  (+8 more)
Tyrimas/og_data/: splits_rskf.json
astroflow_project/: README.md  pyproject.toml
astroflow_project/astroflow/: __init__.py  cli_download.py  cli_enrich.py  cli_tap.py  cli_xp.py  enrich.py  gaia_download.py  gaia_tap.py  xp.py  xp_continuous.py
astroflow_project/astroflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
astroflow_project/examples/: input_coords.csv  mini_cat_coord.csv  out_gaia.csv
astroflow_project/tests/: test_enrich.py  test_gaia_download.py  test_gaia_tap.py  test_xp.py
(+3 files in other folders)
